--- a/fcc-test-suite-template-master/css/style.css
+++ b/fcc-test-suite-template-master/css/style.css
@@ -1,6 +1,66 @@
 body {
-    background-color: darkblue;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.4;
+    color: var(--color-#f3f3f3);
+    margin: 0;
 }
-h1 {
-    
+  body::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+    background: var(--color-darkblue);
+    background-image: linear-gradient(
+        115deg,
+        rgba(58, 58, 158, 0.8),
+        rgba(136, 136, 206, 0.7)
+      ),
+      url(https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+#survey-form {
+    width: 40%;
+    margin-left: 28%;
+    border-radius: 0.25rem;
+    background-color: #1b1b32;
+    padding: 40px;
+    color: #f3f3f3;
+    font-size: 130%;
+}
+#title {
+    color: #f3f3f3;
+    text-align: center;
+    width: 60%;
+    margin-left: 20%;
+    font-family: 'Poppins', sans-serif;
+}
+#description {
+    color: #f3f3f3;
+    text-align: center;
+    width: 60%;
+    margin-left: 20%;
+    font-size: 1.2rem;
+    font-style: italic;
+}
+input {
+    border-radius: 0.35rem;
+    margin: 5px;
+}
+.full-width {
+    width: 95%;
+}
+#suggestions {
+    height: 100px;
+}
+#submit {
+    height: 70px;
+    background-color: rgb(36, 112, 36);
+    color: #f3f3f3;
 }
